packages/react/src/components/badge/Badge.module.scss
@use '@design-system-rte/core/design-tokens/main.scss' as *;

.badgeContainer {
    position: relative;
    display: inline-flex;

    .badge {
        position: absolute;
        border-radius: $radius-pill;
        display: flex;
        align-items: center;
        justify-content: center;
        animation: badge-fade-in 0.15s;

        &[data-badge-type='brand'] {
            @include elevation-brand-shadow-2;
            background-color: var(--background-brand-default);
            color: var(--content-primary-inverse);
        }

        &[data-badge-type='neutral'] {
            @include elevation-neutral-shadow-2;
            background-color: var(--background-neutral-regular-default);
            color: var(--content-secondary);
        }

        &[data-badge-type='indicator'] {
            @include elevation-brand-shadow-2;
            background-color: var(--background-danger-default);
            color: var(--content-primary-inverse);
        }

        &[data-size='XS'] {
            width: 6px;
            height: 6px;
            box-shadow: none;
            top: 0;
            right: 0;
        }

        &[data-size='S'] {
            width: 12px;
            height: 12px;
            top: -3px;
            right: -3px;
        }

        &[data-size='M'] {
            @include typography-text-s-bold;
            min-width: 16px;
            width: fit-content;
            height: 16px;
            top: -4px;
            right: -4px;
            padding: $positive-spacing_0 $positive-spacing_025;
        }

        &[data-size='L'] {
            @include typography-text-l-bold;
            min-width: 24px;
            width: fit-content;
            height: 24px;
            top: -8px;
            right: -8px;
            padding: $positive-spacing_0 $positive-spacing_050;
        }

        p {
            margin: 0;
            animation: text-appear 0.1s;
        }

    }

    .hidden {
        animation: badge-fade-out 0.15s forwards;
    }

}

@keyframes text-appear {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes badge-fade-in {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }

}

@keyframes badge-fade-out {
    from {
        opacity: 1;
    }

    to {
        opacity: 0;
    }

}

